// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateLap (characterization) > produces a stable final classification, including retirements, for a seeded race 1`] = `
[
  {
    "condition": 34,
    "driverId": "d3",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1267.798,
    "tyre": "soft",
  },
  {
    "condition": 90,
    "driverId": "d4",
    "gap": 8.988,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1276.785,
    "tyre": "medium",
  },
  {
    "condition": 9,
    "driverId": "d6",
    "gap": 8.688,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1285.473,
    "tyre": "soft",
  },
  {
    "condition": 83,
    "driverId": "d5",
    "gap": 2.606,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1288.079,
    "tyre": "hard",
  },
  {
    "condition": 77,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 99.896,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;

exports[`simulateLap (characterization) > records a god-mode forced retirement and classifies the car out of the running 1`] = `
[
  {
    "condition": 68,
    "driverId": "d4",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1269.011,
    "tyre": "medium",
  },
  {
    "condition": 70,
    "driverId": "d5",
    "gap": 17.074,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1286.085,
    "tyre": "hard",
  },
  {
    "condition": 67,
    "driverId": "d6",
    "gap": 3.008,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1289.093,
    "tyre": "hard",
  },
  {
    "condition": 16,
    "driverId": "d3",
    "gap": 0,
    "laps": 4,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 4,
    "retired": true,
    "retirementLap": 5,
    "stints": 0,
    "totalTime": 407.752,
    "tyre": "medium",
  },
  {
    "condition": 77,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 99.896,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;
